########################################################################
# Build device decoders library
########################################################################

# commodity libraries
# consider -fvisibility=hidden
add_library(r_decoders STATIC
    abmt.c
    acurite.c
    acurite_01185m.c
    akhan_100F14.c
    alecto.c
    alps_fwb1u545.c
    ambient_weather.c
    ambientweather_tx8300.c
    ambientweather_wh31e.c
    ant_antplus.c
    apator_metra_eitn30.c
    apator_metra_erm30.c
    arad_ms_meter.c
    archos_tbh.c
    arexx_ml.c
    astrostart_2000.c
    atech_ws308.c
    audiovox_pro_oe3b.c
    auriol_4ld5661.c
    auriol_aft77b2.c
    auriol_afw2a1.c
    auriol_ahfl.c
    auriol_hg02832.c
    badger_orion_endpoint.c
    badger_water.c
    baldr_rain.c
    baldr_therm.c
    blueline.c
    blyss.c
    bm5.c
    brennenstuhl_rcs_2044.c
    bresser_3ch.c
    bresser_5in1.c
    bresser_6in1.c
    bresser_7in1.c
    bresser_leakage.c
    bresser_lightning.c
    bresser_st1005h.c
    bt_rain.c
    burnhardbbq.c
    calibeur.c
    cardin.c
    cavius.c
    ced7000.c
    celsia_czc1.c
    chamberlain_cwpirc.c
    chrysler_car_remote.c
    chuango.c
    cmr113.c
    code_alarm_car_remote.c
    companion_wtr001.c
    compustar_1wg3r.c
    continental_car_remote.c
    cotech_36_7959.c
    ctt_life_power_hybrid.c
    current_cost.c
    danfoss.c
    deltadore_x3d.c
    digitech_xc0324.c
    directv.c
    dish_remote_6_3.c
    dsc.c
    ec3k.c
    ecodhome.c
    ecowitt.c
    efergy_e2_classic.c
    efergy_optical.c
    efth800.c
    elro_db286a.c
    elv.c
    emax.c
    emontx.c
    emos_e6016.c
    emos_e6016_rain.c
    enocean_erp1.c
    ert_idm.c
    ert_scm.c
    esa.c
    esic_emt7110.c
    esperanza_ews.c
    eurochron.c
    fineoffset.c
    fineoffset_wh1050.c
    fineoffset_wh1080.c
    fineoffset_wh31l.c
    fineoffset_wh43.c
    fineoffset_wh45.c
    fineoffset_wh46.c
    fineoffset_wh55.c
    fineoffset_wn34.c
    fineoffset_ws80.c
    fineoffset_ws85.c
    fineoffset_ws90.c
    flex.c
    flowis.c
    fordremote.c
    fs20.c
    ft004b.c
    funkbus.c
    gasmate_ba1008.c
    ge_coloreffects.c
    geevon.c
    geevon_tx19.c
    generic_motion.c
    generic_remote.c
    generic_temperature_sensor.c
    geo_minim.c
    gm_car_remote.c
    govee.c
    govee_h5059.c
    gridstream.c
    gt_tmbbq05.c
    gt_wt_02.c
    gt_wt_03.c
    hcs200.c
    hcs361.c
    hideki.c
    holman_ws5029.c
    homelead_hg9901.c
    hondaremote.c
    honeywell.c
    honeywell_cm921.c
    honeywell_wdb.c
    ht680.c
    ibis_beacon.c
    ikea_sparsnas.c
    infactory.c
    inkbird_ith20r.c
    inovalley-kw9015b.c
    insteon.c
    interlogix.c
    intertechno.c
    jasco.c
    kedsum.c
    kerui.c
    klimalogg.c
    lacrosse.c
    lacrosse_breezepro.c
    lacrosse_r1.c
    lacrosse_th3.c
    lacrosse_tx141x.c
    lacrosse_tx22uit.c
    lacrosse_tx31u.c
    lacrosse_tx34.c
    lacrosse_tx35.c
    lacrosse_wr1.c
    lacrosse_ws7000.c
    lacrossews.c
    lightwave_rf.c
    m_bus.c
    markisol.c
    marlec_solar.c
    maverick_et73.c
    maverick_et73x.c
    maverick_xr30.c
    maverick_xr50.c
    mebus.c
    megacode.c
    mic6sc2_car_remote.c
    missil_ml0757.c
    mueller_hotrod.c
    neptune_r900.c
    new_template.c
    newkaku.c
    nexa.c
    nexus.c
    nice_flor_s.c
    nidec_car_remote.c
    norgo.c
    oil_smart.c
    oil_standard.c
    oil_watchman.c
    oil_watchman_advanced.c
    opus_xt300.c
    oregon_scientific.c
    oregon_scientific_sl109h.c
    oregon_scientific_v1.c
    oria_wa150km.c
    philips_aj3650.c
    philips_aj7010.c
    proflame2.c
    prologue.c
    proove.c
    quhwa.c
    quinetic.c
    radiohead_ask.c
    rainpoint.c
    rainpoint_hcs012arf.c
    regency_fan.c
    revolt_nc5462.c
    revolt_zx7717.c
    rfm69_lowpowerlab_moteino.c
    rftech.c
    risco_agility.c
    rojaflex.c
    rosstech_dcu706.c
    rubicson.c
    rubicson_48659.c
    rubicson_pool_48942.c
    s3318p.c
    sainlogic_sa8.c
    schou_72543_rain.c
    schraeder.c
    scmplus.c
    secplus_v1.c
    secplus_v2.c
    sharp_spc775.c
    shenzhen_wale_wl_th6r.c
    siemens_5wy72xx.c
    silvercrest.c
    simplisafe.c
    simplisafe_gen3.c
    smoke_gs558.c
    solight_te44.c
    somfy_iohc.c
    somfy_rts.c
    springfield.c
    srsmith_pool_srs_2c_tx.c
    steelmate.c
    telldus_ft0385r.c
    tfa_14_1504_v2.c
    tfa_30_3196.c
    tfa_30_3221.c
    tfa_drop_30.3233.c
    tfa_marbella.c
    tfa_pool_thermometer.c
    tfa_twin_plus_30.3049.c
    thermopro_tp11.c
    thermopro_tp12.c
    thermopro_tp211b.c
    thermopro_tp28b.c
    thermopro_tp82xb.c
    thermopro_tp86xb.c
    thermopro_tx2.c
    thermopro_tx2c.c
    thermopro_tx7b.c
    thermor.c
    thermor_a6n_132tx.c
    tpms_abarth124.c
    tpms_airpuxem.c
    tpms_ave.c
    tpms_bmw.c
    tpms_bmw_g3.c
    tpms_citroen.c
    tpms_eezrv.c
    tpms_elantra2012.c
    tpms_ford.c
    tpms_gear_hive.c
    tpms_gm.c
    tpms_hyundai_vdo.c
    tpms_jansite.c
    tpms_jansite_solar.c
    tpms_kia.c
    tpms_nissan.c
    tpms_pmv107j.c
    tpms_porsche.c
    tpms_renault.c
    tpms_renault_0435r.c
    tpms_schrader_motorcycle.c
    tpms_toyota.c
    tpms_truck.c
    tpms_trw.c
    tpms_tyreguard400.c
    ts_ft002.c
    ttx201.c
    universalfanctrl.c
    vaillant_vrt340f.c
    vauno_en8822c.c
    vevor_7in1.c
    visonic_powercode.c
    wallarge_cltx001.c
    watts_thermostat.c
    waveman.c
    wec2103.c
    wg_pb12v1.c
    ws2032.c
    wssensor.c
    wt0124.c
    wt450.c
    x10_rf.c
    x10_sec.c
    yale_hsa.c
)

# Explicitly say that we want C99
set_target_properties(r_decoders PROPERTIES C_STANDARD 99)
